--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.main_footer{
+/* .main_footer{
     position: relative;
     bottom:0;
     right:0;
@@ -12,7 +12,7 @@
     align-items: center;
     font-size: 30px;
     font-family: 'JetBrains Mono', monospace;
-}
+} */
 
 /* .main_page_container{
     position: relative;
