--- a/src/Donater/Home/HomePage.css
+++ b/src/Donater/Home/HomePage.css
@@ -3,7 +3,7 @@
     width:100%;
     height:fit-content;
     /* background-image: url(//unsplash.it/1200/1000); */
-    color:blue;
+    color:black;
     font-size: 100px;
     display: flex;
     justify-content: center;
@@ -16,5 +16,4 @@
     font-size:30px;
     height: 100%;
     width:50%;
-    background: yellow;
 }
