--- a/src/Donater/Navbar/Navbar.css
+++ b/src/Donater/Navbar/Navbar.css
@@ -139,19 +139,16 @@
     }
 
 
-
-/* Let's get this party started */
+/* 
 ::-webkit-scrollbar {
     width: 6px !important;
 }
 
  
-/* Track */
 ::-webkit-scrollbar-track {
 display: none;
 }
  
-/* Handle */
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 4px;
     border-radius: 4px;
@@ -160,7 +157,7 @@ display: none;
 }
 ::-webkit-scrollbar-thumb:window-inactive {
 	background: rgba(232, 238, 252, 0.4); 
-}
+} */
 
 
 
