--- a/src/Donater/AboutUs/AboutUs.css
+++ b/src/Donater/AboutUs/AboutUs.css
@@ -2,8 +2,8 @@
     position: relative;
     height:fit-content;
     width:100%;
-    background-color: #c7e3e6;
-    color: black;
+    background-color: black;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
